Avoid portlet edit buttons getting hidden behind webcontent edit buttons

--- a/themes/deltares-theme/src/css/objects/portlet/_general.scss
+++ b/themes/deltares-theme/src/css/objects/portlet/_general.scss
@@ -1,3 +1,7 @@
 .portlet-decorate .portlet-content {
   background-color: transparent;
 }
+
+.autofit-col, .tbar-item {
+  position: absolute;
+}
